[package]
name = "invisible"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[dependencies]
sdl2 = "0.31.0"
byteorder = "1.2.6"
reqwest = "0.9.4"
image = "0.20.0"
log = { version = "0.4.5", features = ["std"] }
cgmath = "0.16.1"
collision = "0.18.0"

[dependencies.steven_gl]
path = "./gl"
version = "0"

[dependencies.steven_resources]
path = "./resources"
version = "0"

